# DDEINT_Research_Benchmarks

./: .gitignore  .gitmodules  Makefile  README.md  benchmark_all_tests.sh  performance_tests.sh
2d_heat_equation/: heat_equation.cpp  heat_equation.hpp
DDEINT_TESTS/: CMakeLists.txt  benchmark_tests.sh  performance_tests.sh
DDEINT_TESTS/2D_Heat_Equation/: heat_equation.hpp
DDEINT_TESTS/Breast_Cancer_Model/: bc_functions.cpp  bc_model.cpp  bc_model_fi.cpp
DDEINT_TESTS/Cardiovascular_Model/: cv_functions.cpp  cv_model.cpp  cv_model_fi.cpp
DDEINT_TESTS/Glucose_Insulin_Model/: gi_benchmark.cpp  gi_functions.hpp
DDEINT_tests/: CMakeLists.txt  benchmark_tests.sh  performance_tests.sh
DDEINT_tests/2D_Heat_Equation/: Readme.md  heat_equation.cpp
DDEINT_tests/Breast_Cancer_Model/: bc_benchmark.cpp  bc_functions.cpp  bc_functions.hpp  bc_model.cpp
DDEINT_tests/Cardiovascular_Model/: cv_benchmark.cpp  cv_model.cpp
DDEINT_tests/Cobweb_Model/: cw_benchmark.cpp  cw_functions.cpp  cw_functions.hpp  cw_model.cpp
DDEINT_tests/Glucose_Insulin_Model/: gi_benchmark.cpp  gi_model.cpp
DDEINT_tests/bench_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Test_Cases/: BC_MODEL.cpp
comparison_tests/copasi_methods_tests/: test_methods_accuracy.py
comparison_tests/copasi_tests/: bc_model.cps  cv_model.cps  cw_model.cps  test_copasi_accuracy.py
comparison_tests/dde_solver_tests/: CMakeLists.txt  benchmark_tests.sh  performance_tests.sh
comparison_tests/dde_solver_tests/Breast_Cancer_Model/: bc_benchmark.f90  bc_benchmark_wrapper.cpp  bc_define_ddes.f90  bc_model.f90
comparison_tests/dde_solver_tests/Cardiovascular_Model/: cv_benchmark.f90  cv_benchmark_wrapper.cpp  cv_define_ddes.f90  cv_model.f90  define_ddes.f90
comparison_tests/dde_solver_tests/Cobweb_Model/: cw_benchmark.f90  cw_benchmark_wrapper.cpp  cw_define_ddes.f90  cw_model.f90
comparison_tests/dde_solver_tests/Glucose_Insulin_Model/: gi_benchmark.f90  gi_benchmark_wrapper.cpp  gi_define_ddes.f90  gi_model.f90
comparison_tests/dde_solver_tests/data/bench_data/: bc_benchmark_results.txt  cv_benchmark_results.txt  cw_benchmark_results.txt  gi_benchmark_results.txt
comparison_tests/dde_solver_tests/data/csv_files/: bc_model_dde_solver.csv  cv_model_dde_solver.csv  cw_model_dde_solver.csv  gi_model_dde_solver.csv
comparison_tests/dde_solver_tests/data/perf_data/: bc_model_perf_report.txt  cv_model_perf_report.txt  cw_model_perf_report.txt  gi_model_perf_report.txt
comparison_tests/dde_tests/: benchmark_tests.sh  performance_tests.sh
comparison_tests/dde_tests_compiled/: benchmark_tests.sh
cpp_utils/: plot.cpp  plot.hpp
data/: BC_MODEL_perf_report.txt  bc_model_jl.csv  cardiovascular_model_cpp.csv  cardiovascular_model_jl.csv
data/perf_data/: BC_MODEL_perf_report.txt
test/: CMakeLists.txt  DDE_tests.cpp  DDE_tests.jl  Data_Comp.py  benchmark_results.txt  benchmark_tests.sh  main.cpp  main.jl  main.py  performance_tests.sh
test/2D_Heat_Equation/: heat_equation  heat_equation.cpp  heat_equation.hpp  laplacian.cpp  laplacian.hpp
test/2D_Heat_Equation/data/: heat_equation_output.csv  laplacian_out.csv
test/2D_Heat_Equation/scripts4anaylysis/: analytical_solution.py
test/Breast_Cancer_Model/: bc_benchmark.cpp  bc_functions.cpp  bc_functions.hpp  bc_model_fi.cpp
test/Cardiovascular_Model/: cv_benchmark.cpp  cv_functions.cpp  cv_functions.hpp  cv_model_fi.cpp
test/Glucose_Insulin_Model/: gi_benchmark.cpp  gi_functions.cpp  gi_functions.hpp  gi_model_fi.cpp
test/Systems_With_Delays/: BC_Model.hpp  BC_Model.jl  CV_Model.hpp  CV_Model.jl  DDE_tests.cpp  DDE_tests.jl  Data_Comp.py  RS_Model.hpp  RS_Model.jl  dde_elapsed_times_cpp.csv  dde_elapsed_times_jl.csv
test/Systems_With_Delays/data/: bc_model_cpp.csv  bc_model_jl.csv  cardiovascular_model_cpp.csv  cardiovascular_model_jl.csv  repressilator_model_cpp.csv  repressilator_model_jl.csv  sir_model_cpp.csv  sir_model_jl.csv
test/data/: bc_benchmark_results.txt  bc_model_cpp.csv  bc_model_jl.csv  bc_model_perf_report.txt  cardiovascular_model_cpp.csv  cardiovascular_model_jl.csv  cv_benchmark_results.txt  cv_model_perf_report.txt  gi_benchmark_results.txt  gi_model_cpp.csv  gi_model_perf_report.txt  repressilator_model_cpp.csv  repressilator_model_jl.csv  sir_model_cpp.csv  sir_model_jl.csv
test/perf_output/: bc_model_perf_report.txt  cv_model_perf_report.txt  gi_model_perf_report.txt  out.folded  out.perf  perf.data  perf.data.old
tests/: CMakeLists.txt
tests/2D_Heat_Equation/: heat_equation.cpp  (+1 more)
(+82 files in other folders)
